# restaurant-ops-copilot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy_smoke_test.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml
.claude/: launch.json
agent/: approval.py  nl_ops.py  planner.py  verifier.py
api/: main.py
data_gen/: constants.py  generate.py  seed.py
db/: schema.sql
forecasting/: baseline.py  data.py  evaluate.py  run.py  xgb.py
frontend/: index.html
mcp_client/: __init__.py  client.py
procurement/: bom.py  cart.py  shortfall.py
synthetic_mcp/: cart_store.py  db.py  server.py
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_scaffold.py
tests/agent_eval/: eval_harness.py  results.md  test_injection.py
