[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restaurant-ops-copilot"
version = "0.1.0"
description = "AI-powered demand forecasting and procurement agent for restaurants, built on a synthetic Swiggy-compatible MCP server"
requires-python = ">=3.11"
dependencies = [
    # MCP
    "mcp>=1.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # LLM
    "anthropic>=0.40.0",
    # Database
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Forecasting
    "prophet>=1.1.6",
    "xgboost>=2.1.3",
    "scikit-learn>=1.6.0",
    # Data
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    # Config
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Utils
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "data_gen", "forecasting", "mcp_client", "procurement", "synthetic_mcp"]
